--- a/package.json
+++ b/package.json
@@ -4,26 +4,25 @@
   "description": "nopcommerce-demo-store-automation",
   "main": "index.js",
   "scripts": {
-    "test": "protractor JSFiles/config.js",
-    "pretest": "tsc",
-    "protractor": "./node_modules/protractor/built/cli.js",
-    "webdriver-update": "./node_modules/.bin/webdriver-manager update",
-    "webdriver-start": "./node_modules/.bin/webdriver-manager start"
+    "wstart": "webdriver-manager update && webdriver-manager start",
+    "test": "concurrently --kill-others \"npm run wstart\" \"delay 10 && tsc && protractor JSFiles/config.js\""
   },
   "author": "Mufeed",
   "license": "ISC",
   "dependencies": {
-    "protractor": "5.4.2",
-    "typescript": "3.4.3",
+    "@types/cucumber": "4.0.4",
     "@types/node": "12.12.2",
     "@types/selenium-webdriver": "3.0.8",
-    "@types/cucumber": "4.0.4",
     "chai": "4.2.0",
+    "concurrently": "^5.2.0",
     "cucumber": "6.0.5",
     "cucumber-html-reporter": "5.2.0",
+    "delay-cli": "^1.1.0",
+    "moment": "2.27.0",
+    "protractor": "5.4.2",
     "protractor-cucumber-framework": "6.2.1",
     "selenium-server-standalone-jar": "3.141.59",
-    "webdriver-manager": "12.1.7",
-    "moment": "2.27.0"
+    "typescript": "3.4.3",
+    "webdriver-manager": "12.1.7"
   }
 }
